lab1/Test/L1-A-4-30.cmm
oCvGoau , ncyNpjL 

;
int DH9XT7ZQZMgVFNXK50 ( struct {
}n9rYdHQlwi ) float d1DT3PhnWcxo8c61XD [ 1037366763 
  ] = k2 ;
int BHj [ 1251381328 ] [ 1137474271 ] 
{
  float e6gWqAL7cUbTmRorie ;
}}
struct _eRESHhB2xFF tvsdPfjw3xTHxFUd4KBu ( struct 
  GZnTz1AAXAzwvycvP2 B2ujDQswXiS , int kPTc5c9K5 ) {
  float Nhvnu1Mxl3j0yehPZ [ 1951234657 ] [ 1517179059 
    ] = s6trVQ_Z6kf , OCowgnHzfvr 
  int x ;
}
int v2UwrkOX0 , s4WpYa6rrlpDeOuRbn [ 562815267 ] , 
  MK3IzB 


;
